# XSOVAX-stm32_-_LCD_ILI9225_SD_card

./: .gitignore  CMakeLists.txt
FatFS/: diskio.c  ffconf.h
FatFS/SD/: SD_card.c  SD_card.h  file_work.c  file_work.h
LCD/: ILI9225.c  ILI9225.h  ILI9225_colours.h  ILI9225_registers.h  fonts.c  fonts.h
cmsis/: stm32f1xx.h  system_stm32f1xx.c
inc/: EXTI.h  SPI.h  TIMER.h  USART.h  menu.h
ld/: bootloader.ld
src/: EXTI.c  SPI.c  TIMER.c  USART.c  fonts.c  main.c  menu.c  syscalls.c
